# elevatorsim

./: .gitignore  CMakeLists.txt  README.md  build.ps1  build.sh
glad/include/glad/: glad.h
glad/src/: glad.c
src/: app_info.h  app_info.h.in  elevator.cpp  elevator.h  main.cpp  scene.cpp  scene.h
src/engine/: engine.cpp  engine.h  shader_loader.cpp  shader_loader.h
src/engine/shader/: basic_frag.glsl  basic_vertex.glsl
